--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <section class="hero">
   <div class="container hero-grid">
     <div class="hero-image">
-      <img src="assets/banner.png" alt="Entrepreneur" />
+      <img src="assets/banner 1.jpeg" alt="Entrepreneur" />
     </div>
     <!--<div class="hero-text">
       <span class="small-title">Join Our Exclusive</span>
@@ -949,3 +949,4 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
